--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,12 @@
 /* This file is for your main application CSS */
-@import "./phoenix.css";
+/* @import "./phoenix.css"; */
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /* Alerts and form errors used by phx.new */
+/* 
 .alert {
   padding: 15px;
   margin-bottom: 20px;
@@ -33,9 +38,10 @@
   color: #a94442;
   display: block;
   margin: -1rem 0 2rem;
-}
+} */
 
 /* LiveView specific classes for your customization */
+/* 
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
   display: none;
@@ -46,15 +52,15 @@
   transition: opacity 1s ease-out;
 }
 
-.phx-disconnected{
+.phx-disconnected {
   cursor: wait;
 }
-.phx-disconnected *{
+.phx-disconnected * {
   pointer-events: none;
 }
 
 .phx-modal {
-  opacity: 1!important;
+  opacity: 1 !important;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -62,8 +68,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .phx-modal-content {
@@ -86,4 +92,4 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
+}  */
