--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,7 @@
 @import "tailwindcss/utilities";
 
 /* Alerts and form errors used by phx.new */
-/* 
+
 .alert {
   padding: 15px;
   margin-bottom: 20px;
@@ -38,10 +38,10 @@
   color: #a94442;
   display: block;
   margin: -1rem 0 2rem;
-} */
+}
 
 /* LiveView specific classes for your customization */
-/* 
+
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
   display: none;
@@ -92,4 +92,4 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
-}  */
+}
