Connected to vanguard

--- a/lib/goplay_plugin_web/live/tools/chat_live.html.heex
+++ b/lib/goplay_plugin_web/live/tools/chat_live.html.heex
@@ -4,7 +4,7 @@
 <.form let={f} for={:input} phx-submit="run">
   <div class="mb-1">
     <%= label f, :event_slug, "Event Slug", class: "block" %>
-    <%= text_input f, :event_slug, class: "block border rounded w-1/2", value: "valorant-d1" %>
+    <%= text_input f, :event_slug, class: "block border rounded w-1/2", value: "playing-funn" %>
   </div>
   <div class="mt-2">
     <%= submit "Run", class: "border rounded p-1" %>
