--- a/lib/goplay_plugin_web/live/tools/chat_live.html.heex
+++ b/lib/goplay_plugin_web/live/tools/chat_live.html.heex
@@ -3,8 +3,8 @@
 </div>
 <.form let={f} for={:input} phx-submit="run">
   <div class="mb-1">
-    <%= label f, :event_slug, "Event Slug", class: "block" %>
-    <%= text_input f, :event_slug, class: "block border rounded w-1/2", value: "playing-funn" %>
+    <%= label f, :event_url, "Event URL", class: "block" %>
+    <%= text_input f, :event_url, class: "block border rounded w-1/2", required: true %>
   </div>
   <div class="mt-2">
     <%= submit "Run", class: "border rounded p-1" %>
