--- a/lib/goplay_plugin_web/templates/tools/home/index.html.heex
+++ b/lib/goplay_plugin_web/templates/tools/home/index.html.heex
@@ -1,6 +1,4 @@
 <div class="p-4">
   <h1 class="font-bold text-lg mb-2">Goplay Tools</h1>
-  <div class="block border rounded p-1 w-40 text-center">
-    <%= link("Chat", to: "/tools/chat") %>
-  </div>
+  <%= link("Chat", to: "/tools/chat", class: "block border rounded p-1 w-40 text-center") %>
 </div>
