Add new app skeleton

--- a/lib/goplay_plugin_web/live/tools/chat/app_live.html.heex
+++ b/lib/goplay_plugin_web/live/tools/chat/app_live.html.heex
@@ -1,5 +1,5 @@
 <div class="fixed top-0 right-0 border rounded bg-white p-1 max-w-xs">
-  <p>Plugin Control</p>
+  <p class="font-bold">Plugin Control</p>
 
   <p>Event: <%= @slug %></p>
   <%= if @status == "finished" do %>
